--- a/circle.yml
+++ b/circle.yml
@@ -4,4 +4,5 @@ machine:
 
 test:
   override:
-    - docker-compose run test
+    - docker build -t nodejs-require-test -f Dockerfile.test .
+    - docker run nodejs-require-test
